--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainMap.MainMap
+GameDefaultMap=/Game/Maps/StartMap.StartMap
 EditorStartupMap=/Game/Maps/MainMap.MainMap
 GlobalDefaultGameMode=/Game/Blueprint/BP_GameModeSpace.BP_GameModeSpace_C
 
@@ -10,9 +10,9 @@ r.AllowStaticLighting=False
 
 r.GenerateMeshDistanceFields=True
 
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 
-r.ReflectionMethod=1
+r.ReflectionMethod=0
 
 r.SkinCache.CompileShaders=True
 
@@ -20,13 +20,19 @@ r.RayTracing=True
 
 r.RayTracing.RayTracingProxies.ProjectEnabled=True
 
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.DefaultFeature.MotionBlur=False
+r.AntiAliasingMethod=0
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Bias=0.000000
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -93,4 +99,8 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/MoteurTP1.PlayerPawn.PlayerState",NewName="/Script/MoteurTP1.PlayerPawn.SpacePlayerState")
 
